fix quiz radio alignment

--- a/src/web/themes/custom/bcgov_career/src/sass/_components.scss
+++ b/src/web/themes/custom/bcgov_career/src/sass/_components.scss
@@ -1458,7 +1458,8 @@ body.path-quiz {
 
 span.question-prefix {
     float: left;
-    margin-right: 10px;
+    width: 30px;
+    //margin-right: 10px;
     margin-top: 12px;
     color: #333333;
 
